# slimburn_demo_june2026

./: Cargo.toml  README.md
crates/burn/: Cargo.toml
crates/burn-core/: Cargo.toml
crates/burn-dispatch/: Cargo.toml
crates/burn-store/: Cargo.toml
crates/burn-tensor/: Cargo.toml
crates/burn-train/: Cargo.toml
