[package]
authors = ["Dilshod Tadjibaev (@antimora)"]
categories = ["science", "no-std", "embedded", "wasm"]
description = "Storage and serialization infrastructure for Burn"
documentation = "https://docs.rs/burn-store"
edition.workspace = true
keywords = ["deep-learning", "machine-learning", "tensor", "storage", "serialization"]
license.workspace = true
name = "burn-store"
readme.workspace = true
repository = "https://github.com/tracel-ai/burn/tree/main/crates/burn-store"
version.workspace = true

[lints]
workspace = true

[features]
default  = ["std", "pytorch", "safetensors", "burnpack", "memmap"]
memmap   = ["std", "dep:memmap2"]
std = [
    "dep:memmap2",
    "safetensors/std",
    "burn-core/std",
    "dep:regex",
    "byteorder/std",
]

burnpack    = ["serde", "ciborium"]
safetensors = ["dep:safetensors"]
pytorch     = ["burn-core/record-item-custom-serde", "zip", "serde", "tar"]

[dependencies]
burn-core     = { workspace = true }
byteorder     = { workspace = true, default-features = false }
bytes         = { workspace = true }
ciborium      = { workspace = true, optional = true }
half          = { workspace = true }
hashbrown     = { workspace = true, features = ["serde"] }
memmap2       = { workspace = true, optional = true }
regex         = { workspace = true, optional = true }
serde         = { workspace = true, optional = true }
textdistance  = { workspace = true }
zip           = { workspace = true, optional = true }
tar           = { workspace = true, optional = true }
lzma-rust2    = { workspace = true, optional = true }
safetensors   = { workspace = true, optional = true }

[dev-dependencies]
burn-core = { workspace = true, features = ["flex"] }
burn-nn   = { workspace = true }
divan     = "0.1"
tempfile  = { workspace = true }

[[bench]]
harness = false
name = "resnet18_loading"

[[bench]]
harness = false
name = "unified_loading"

[[bench]]
harness = false
name = "unified_saving"

[[bench]]
harness = false
name = "zero_copy_loading"

[target.'cfg(not(target_has_atomic = "ptr"))'.dependencies]
bytes = { workspace = true, features = ["extra-platforms"] }
