[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science", "no-std", "embedded", "wasm"]
description = "Tensor library with user-friendly APIs and automatic differentiation support"
documentation = "https://docs.rs/burn-tensor"
edition.workspace = true
keywords = ["deep-learning", "machine-learning", "tensor", "pytorch", "ndarray"]
license.workspace = true
name = "burn-tensor"
readme.workspace = true
repository = "https://github.com/tracel-ai/burn/tree/main/crates/burn-tensor"
version.workspace = true

[lints]
workspace = true

[features]
default = ["std", "burn-dispatch/default"]
doc = ["default"]
std = [
    "num-traits/std",
    "burn-std/std",
    "burn-backend/std",
    "burn-dispatch/std",
    "colored",
]
tracing = ["burn-std/tracing", "burn-backend/tracing", "burn-dispatch/tracing"]

# The only supported backend
ndarray  = ["burn-dispatch/ndarray"]
flex     = ["burn-dispatch/flex"]
autodiff = ["burn-dispatch/autodiff"]

# For backend extensions
extension = []

# Backend features
autotune        = ["burn-dispatch/autotune"]
autotune-checks = ["burn-dispatch/autotune-checks"]
fusion          = ["burn-dispatch/fusion"]

[dependencies]
burn-std      = { workspace = true }
burn-backend  = { workspace = true }
burn-dispatch = { workspace = true }
colored       = { workspace = true, optional = true }
derive-new    = { workspace = true }
num-traits    = { workspace = true }
serde         = { workspace = true }

[package.metadata.docs.rs]
features = ["doc"]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
